--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-streamlit==1.11.0
--r https://raw.githubusercontent.com/snowflakedb/snowflake-connector-python/v2.7.9/tested_requirements/requirements_37.reqs
+streamlit
+-r https://raw.githubusercontent.com/snowflakedb/snowflake-connector-python/v3.12.3/tested_requirements/requirements_37.reqs
