--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
 streamlit
--r https://raw.githubusercontent.com/snowflakedb/snowflake-connector-python/v3.12.3/tested_requirements/requirements_37.reqs
+asn1crypto==1.5.1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+cryptography==43.0.3
+filelock==3.16.1
+idna==3.10
+packaging==24.1
+platformdirs==4.3.6
+pycparser==2.22
+PyJWT==2.9.0
+pyOpenSSL==24.2.1
+pytz==2024.2
+requests==2.32.3
+sortedcontainers==2.4.0
+tomlkit==0.13.2
+typing_extensions==4.12.2
+urllib3==2.2.3
+snowflake-connector-python==3.12.3
