--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
 snowflake-connector-python==3.12.3
+requests
 snowflake-snowpark-python==1.24.0
 sortedcontainers==2.4.0
 tomlkit==0.13.2
